⬆️ Upgrade to Quarkus 3.32.1.